# codex-openai-api

./: .env.example  Cargo.toml  Dockerfile  README.md  SPEC.md  compose.yml
scripts/: codex_client.py
src/: lib.rs  main.rs
tests/: fake_codex.sh  fake_codex_pid.sh  fake_codex_slow.sh
